--- a/packages/codeworld-haap-api/codeworld-haap-api.cabal
+++ b/packages/codeworld-haap-api/codeworld-haap-api.cabal
@@ -32,6 +32,10 @@ Library
                        Graphics.Gloss.Interface.Pure.Animate,
                        Graphics.Gloss.Interface.Pure.Simulate,
                        Graphics.Gloss.Interface.Pure.Game
+                       Graphics.Gloss.Interface.IO.Display,
+                       Graphics.Gloss.Interface.IO.Animate,
+                       Graphics.Gloss.Interface.IO.Simulate,
+                       Graphics.Gloss.Interface.IO.Game
                        Graphics.Gloss.Geometry.Angle
                        Graphics.Gloss.Geometry.Line
   Other-modules:       CodeWorld.Color,
@@ -46,7 +50,8 @@ Library
                        random               >= 1.1 && < 1.2,
                        random-shuffle       >= 0.0.4 && < 0.1,
                        cereal               >= 0.5.4 && < 0.6,
-                       cereal-text          >= 0.1.0 && < 0.2
+                       cereal-text          >= 0.1.0 && < 0.2,
+                       filepath
 
   if impl(ghcjs)
     Build-depends:
