--- a/HAAP.cabal
+++ b/HAAP.cabal
@@ -49,9 +49,10 @@ Library
     HAAP.Web.HTML.Table
     HAAP.Template
     HAAP.Web.PHP.Login
+    HAAP.Web.HTML.Pandoc
         
   Hs-source-dirs:   src
   Other-Modules:
     Paths_HAAP
-  Build-Depends:    dlist, containers, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll == 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process
+  Build-Depends:    dlist, containers, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll == 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb
 
