--- a/HAAP.cabal
+++ b/HAAP.cabal
@@ -53,7 +53,7 @@ Library
     HAAP.Web.HTML.TagSoup
     HAAP.Code.Haskell
     HAAP.Code.Analysis.Haddock
-    HAAP.Code.Analysis.CComplexity
+    HAAP.Code.Analysis.SourceGraph
     HAAP.Code.Analysis.Usage
     HAAP.Code.Git
     HAAP.Code.Analysis.Modularity
@@ -61,5 +61,5 @@ Library
   Hs-source-dirs:   src
   Other-Modules:
     Paths_HAAP
-  Build-Depends:    cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll == 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, haddock-library, system-locale
+  Build-Depends:    cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll == 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, haddock-library, system-locale, SourceGraph==0.7.0.8, fgl, Graphalyze
 
