--- a/HAAP.cabal
+++ b/HAAP.cabal
@@ -62,9 +62,10 @@ Library
     HAAP.Code.Git
     HAAP.Code.Analysis.Modularity
     HAAP.Graphics.Gloss.Capture
+    HAAP.Web.Graphics.Xterm
         
   Hs-source-dirs:   src
   Other-Modules:
     Paths_HAAP
-  Build-Depends:    call-stack, cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec >= 2.5.0, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll >= 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, haddock-library, system-locale, SourceGraph==0.7.0.8, fgl, Graphalyze >= 0.15.0.0, monad-control, mmorph, StateVar, gloss, GLFW, OpenGL, OpenGLRaw, JuicyPixels, gloss-rendering, cmdargs, async
+  Build-Depends:    call-stack, cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec >= 2.5.0, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll >= 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, haddock-library, system-locale, SourceGraph==0.7.0.8, fgl, Graphalyze >= 0.15.0.0, monad-control, mmorph, StateVar, gloss, GLFW, OpenGL, OpenGLRaw, JuicyPixels, gloss-rendering, cmdargs, async, Xterm
 
