--- a/packages/snap-exports/snap-exports.cabal
+++ b/packages/snap-exports/snap-exports.cabal
@@ -25,7 +25,7 @@ Library
   build-depends:       base             
                        , snap-core
                        , aeson
-                       , snap
+                       , snap == 1.1.1.0
                        , text
                        , hashmap
                        , hashable
