--- a/HAAP.cabal
+++ b/HAAP.cabal
@@ -45,6 +45,7 @@ Library
     HAAP.Doc.Haddock
     HAAP.CmdArgs
     HAAP.Code.HLint
+    HAAP.Code.GHC
     HAAP.Code.Homplexity
     HAAP.Code.HPC
     HAAP.Web.Graphics.CodeWorld
@@ -64,9 +65,12 @@ Library
     HAAP.Code.Analysis.Modularity
     HAAP.Graphics.Gloss.Capture
     HAAP.Web.Graphics.Xterm
+    HAAP.Web.Diff
+    HAAP.Code.Brittany
+    HAAP.Code.Debugger
         
   Hs-source-dirs:   src
   Other-Modules:
     Paths_HAAP
-  Build-Depends:    strict-io, call-stack, cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec >= 2.5.0, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll >= 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, parsec-numbers, haddock-library, system-locale, SourceGraph==0.7.0.8, homplexity==0.4.3.5, fgl, Graphalyze >= 0.15.0.0, monad-control, mmorph, StateVar, gloss, GLFW, OpenGL, OpenGLRaw, JuicyPixels, gloss-rendering, cmdargs, async, Xterm
+  Build-Depends:    strict-io, call-stack, cassava, bifunctors, dlist, containers, unordered-containers, vector, transformers, base, mtl, data-default, lens, deepseq, filepath, bytestring, knob, HUnit, hspec >= 2.5.0, hspec-contrib, hspec-core, QuickCheck, exceptions, safecopy, acid-state, pretty, GenericPretty, hakyll >= 4.9.8.0, contravariant, shelly, text, directory, random-shuffle, blaze-html, time, binary, split, safe, template, filemanip, process, pandoc, syb, tagsoup, haskell-src-exts, parsec, parsec-numbers, haddock-library, system-locale, SourceGraph==0.7.0.8, homplexity==0.4.3.5, fgl, Graphalyze >= 0.15.0.0, monad-control, mmorph, StateVar, gloss, GLFW, OpenGL, OpenGLRaw, JuicyPixels, gloss-rendering, cmdargs, async, Xterm, Hoed-extras==0.5.1
 
