--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "packages/snaplet-acid-state"]
 	path = packages/snaplet-acid-state
 	url = https://github.com/hpacheco/snaplet-acid-state
+[submodule "packages/snap-extras"]
+	path = packages/snap-extras
+	url = https://github.com/hpacheco/snap-extras
