--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,11 +12,11 @@ WORKDIR $HOME/HAAP
 RUN cabal update
 RUN cp ../ghcjs/cabal.sandbox.config cabal.sandbox.config
 RUN cabal sandbox add-source $HOME/HAAP/packages/*
-RUN cabal install brittany haddock hlint homplexity $HOME/HAAP/HAAP.cabal $HOME/HAAP/packages/gloss-window $HOME/HAAP/packages/snap-exports $HOME/HAAP/packages/snaplet-acid-state-0.2.8 $HOME/HAAP/packages/snap-extras-0.12.2.1 --disable-documentation
+RUN cabal install brittany haddock hlint /home/HAAP/packages/SourceGraph/SourceGraph.cabal /home/HAAP/packages/Xterm/Xterm.cabal /home/HAAP/packages/homplexity/homplexity.cabal /home/HAAP/packages/debug/debug.cabal /home/HAAP/packages/hakyll/hakyll.cabal /home/HAAP/HAAP.cabal /home/HAAP/packages/gloss-window /home/HAAP/packages/snap-exports /home/HAAP/packages/snaplet-acid-state /home/HAAP/packages/snap-extras --disable-documentation
 
 # install HAAP ghcjs packages
 WORKDIR $HOME
-RUN cabal install --ghcjs $HOME/HAAP/packages/codeworld-haap-api $HOME/HAAP/packages/gloss-window $HOME/HAAP/packages/Xterm $HOME/HAAP/packages/ghcjs-extras QuickCheck GenericPretty safe xml parsec --disable-documentation
+RUN cabal install --ghcjs /home/HAAP/packages/codeworld-haap-api /home/HAAP/packages/gloss-window /home/HAAP/packages/Xterm /home/HAAP/packages/ghcjs-extras QuickCheck GenericPretty safe xml parsec --disable-documentation
 
 # prepare examples
 RUN ln -s $HOME/cabal.sandbox.config $HOME/HAAP/examples/helloworld/cabal.sandbox.config
