--- a/.gitmodules
+++ b/.gitmodules
@@ -27,4 +27,4 @@
 	url = https://github.com/hpacheco/hakyll
 [submodule "packages/ghcjs-fetch"]
 	path = packages/ghcjs-fetch
-	url = git://github.com/hpacheco/ghcjs-fetch.git
+	url = https://github.com/hpacheco/ghcjs-fetch
