--- a/packages/codeworld-haap-api/codeworld-haap-api.cabal
+++ b/packages/codeworld-haap-api/codeworld-haap-api.cabal
@@ -42,15 +42,15 @@ Library
                        CodeWorld.Picture,
                        CodeWorld.Event,
                        CodeWorld.Driver
-  Build-depends:       base                 >= 4.8 && < 5,
-                       containers           >= 0.5.7 && < 0.6,
-                       hashable             >= 1.2.4 && < 1.3,
-                       text                 >= 1.2.2 && < 1.3,
-                       mtl                  >= 2.2.1 && < 2.3,
-                       random               >= 1.1 && < 1.2,
-                       random-shuffle       >= 0.0.4 && < 0.1,
-                       cereal               >= 0.5.4 && < 0.6,
-                       cereal-text          >= 0.1.0 && < 0.2,
+  Build-depends:       base                 >= 4.8,
+                       containers           >= 0.5.7, 
+                       hashable             >= 1.2.4, 
+                       text                 >= 1.2.2, 
+                       mtl                  >= 2.2.1, 
+                       random               >= 1.1  ,
+                       random-shuffle       >= 0.0.4, 
+                       cereal               >= 0.5.4, 
+                       cereal-text          >= 0.1.0, 
                        filepath
 
   if impl(ghcjs)
@@ -59,8 +59,8 @@ Library
                        ghcjs-prim,
                        ghcjs-dom             >= 0.9
   else
-    Build-depends:     blank-canvas          >= 0.6 && < 0.7,
-                       time                  >= 1.6.0 && < 1.9
+    Build-depends:     blank-canvas          >= 0.6,
+                       time                  >= 1.6.0
 
   Exposed:             True
   Ghc-options:         -O2
